<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.artistapp.VideoActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Videos" />
    
     <RadioGroup
        android:id="@+id/videoRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/videoRadio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/videoRadioButton1" />

        <RadioButton
            android:id="@+id/videoRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videoRadioButton2" />

        <RadioButton
            android:id="@+id/videoRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videoRadioButton3" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonVideoPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoRadioGroup"
        android:layout_centerHorizontal="true"
        android:text="Play" />

    <VideoView
        android:id="@+id/videoView1"
        android:layout_below="@+id/buttonVideoPlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true" />
        
</RelativeLayout>